# HMM_FASTA_Viterbi

./: CMakeLists.txt  README.md  compile_clang_in_build_dir.sh  compile_clang_release_in_build_dir.sh  hmm.cpp  hmm.h  main.cpp  run_in_build_dir.sh
FASTA_files/: fasta_like_example.fsa  random_FASTA.fsa  random_FASTA_generator.py
algorithms/: CMakeLists.txt  MSV_HMM.cpp  MSV_HMM.hpp  MSV_HMM_spec.cpp  MSV_HMM_spec.hpp  MSV_kernel_store.hpp  MSV_kernels.cl  MSV_p_gen.py  MSV_spec_kernels.cl  benchmark_MSV.cpp  benchmark_MSV_1400.cpp  benchmark_MSV_spec.cpp  benchmark_MSV_spec_1400.cpp  benchmark_helper.hpp  clean_MSV_kernel_store.py  init_kernel.cl  test_MSV.cpp  test_MSV_spec.cpp
cmake/Modules/: FindComputeCpp.cmake
data_models/: CMakeLists.txt  FASTA_protein_sequences.cpp  FASTA_protein_sequences.h  FASTA_protein_sequences.hpp  MSV_HMM.cpp  MSV_HMM.h  MSV_HMM.hpp  Profile_HMM.cpp  Profile_HMM.h  Profile_HMM.hpp  fasta_protein_sequences.cpp  fasta_protein_sequences.h  hmm.cpp  hmm.h  test_MSV.cpp  test_MSV.h  test_MSV.hpp  test_fasta_parsing.cpp  test_fasta_parsing.h  test_fasta_parsing.hpp  test_hmm_parsing.cpp  test_hmm_parsing.h  test_hmm_parsing.hpp
data_readers/: CMakeLists.txt  FASTA_protein_sequences.cpp  Profile_HMM.cpp  Profile_HMM.hpp  test_fasta_parsing.cpp  test_hmm_parsing.cpp
